src/scss/_recipe-list.scss
// TODO: Extract to main.scss
.coffee-spinner {
  width: 100%;
  margin: 2rem auto;
  max-width: 12rem;
}

 // Recipe List Nav
//////////////////////////////////////////

.nav--recipe-list {
  @extend .clearfix;
  box-sizing: border-box;
  display: block;
  margin: 0 auto;
  max-width: 40rem;
  width: 90%;

  input {
    box-sizing: border-box;
    width: 40%;
    float: left;
  }

  select {
    box-sizing: border-box;
    float: right;
    width: 40%;
  }

  .clicker-button {
    clear: both;
    display: block;
    margin: 1rem 0 2rem;
  }
}

 // Recipe List
//////////////////////////////////////////

.recipe-list {
  @extend .clearfix;
  box-sizing: border-box;
  margin: 0 auto 3ex;
  max-width: 40rem;
  width: 90%;

  p {
    margin: 0;
  }

  .col-1-2 {
    width: 50%;
    float: left;
  }

  .col-1-4 {
    width: 110%;
    float: left;
    span {
      float: left;
    }
  }

  .count {
    font-size: 0.8em;
    margin-left: 2%;
    margin-top: 1.9ex;
    img {
     width: 17px;
    }
  }

  .list-brew-it {
    background-color: $BrewIt;
    box-sizing: border-box;
    cursor: pointer;
    float: right;
    font-weight: 600;
    margin: 0.6rem 0 0;
    padding: 1ex 0;
    text-align: center;
    width: 85%;
  }

  .recipe-title {
    box-sizing: border-box;
    font-weight: bold;
    margin: 0;
    max-width: 9rem;
    width: 100%;
  }

  // TODO: Make this text color a variable
  .shared-by {
    color: #b1b2b4;
    clear: both;
    display: block;
    & span {
      color: $BrewIt;
    }
  }
}

